# cong-nghe-loi

./: .gitignore  README.md  Tutorial.MD  pyproject.toml  requirements.txt
api_migration_checker/app/: __init__.py  ai_mapping.py  compare.py  config.py  extract.py  mapper.py  runner.py  storage.py  template_resolver.py
examples/: config.internal-api.yaml  config.problematic-many-to-many.yaml  config.sample.yaml
results/: migration_check.db
results/run_1/: full_result.json  mismatch_report.csv
results/run_10/: full_result.json  mismatch_report.csv  summary.txt
results/run_11/: full_result.json  mismatch_report.csv  summary.txt
results/run_12/: full_result.json  mismatch_report.csv
results/run_13/: full_result.json
results/run_14/: full_result.json  mismatch_report.csv
results/run_15/: full_result.json  mismatch_report.csv  summary.txt
results/run_16/: full_result.json  summary.txt
results/run_17/: full_result.json  mismatch_report.csv
results/run_18/: full_result.json
results/run_19/: full_result.json  mismatch_report.csv
results/run_2/: full_result.json  mismatch_report.csv
results/run_20/: full_result.json  mismatch_report.csv  summary.txt
results/run_3/: full_result.json  mismatch_report.csv  summary.txt
results/run_4/: full_result.json  mismatch_report.csv  summary.txt
results/run_5/: full_result.json  mismatch_report.csv  summary.txt
results/run_6/: full_result.json  mismatch_report.csv  summary.txt
results/run_7/: full_result.json  mismatch_report.csv  summary.txt
results/run_8/: full_result.json  (+1 more)
tests/: test_core.py
(+18 files in other folders)
