[project]
name = "api-migration-checker"
version = "0.1.0"
description = "API migration result verification with CLI and simple Python web UI"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0",
  "httpx>=0.27",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
api-migration-checker = "api_migration_checker.app.cli.commands:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
